--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -12,7 +12,7 @@ set sort_reverse        false
 set sort_case_insensitive true
 set sort_directories_first true
 
-set draw_borders        true
+#set draw_borders        true
 set preview_images      true
 set use_preview_script  true
 set preview_script ~/.config/ranger/scope.sh
