--- a/i3/config
+++ b/i3/config
@@ -19,7 +19,7 @@ bindsym $alt+b border toggle
 # autostart
 exec $psst compton -bcf -i 0.7
 exec $psst redshift
-exec $psst xbacklight -set 33
+exec $psst light -s 50
 exec $psst feh --bg-scale ~/img/deathstar.png
 #exec $psst imv -f ~/img/deathstar.png &
 exec $psst xautolock -time 9 -locker '~/.i3/i3exit.sh lock' &
@@ -84,7 +84,7 @@ bindsym $alt+Shift+Right move right
 
 # split horizontal/vertical
 bindsym $alt+semicolon  split v
-bindsym $alt+backslash  split h
+bindsym $alt+apostrophe split h
 
 # enter fullscreen mode for the focused container
 bindsym $alt+f fullscreen
@@ -184,6 +184,7 @@ assign [class="google-chrome"]  $w3
 assign [class="qutebrowser"] 	$w3
 assign [class="Thunderbird"] 	$w4
 assign [class="QtCreator"]   	$w6
+assign [class="Eclipse"]   		$w6
 assign [class="VirtualBox"]  	$w10
 
 # reload the configuration file
@@ -325,7 +326,7 @@ bindsym $alt+Super_L scratchpad show
 for_window [title="^forticlientsslvpn"] move scratchpad show
 
 # My favorite programs
-bindsym $sup+a exec audacious
+bindsym $sup+a exec stm32-workbench
 bindsym $sup+b exec VirtualBox
 #bindsym $sup+c exec wine "C:\\Program Files (x86)\\analogx\\Palc\\pcalc.exe"
 bindsym $sup+c exec speedcrunch
@@ -335,9 +336,9 @@ bindsym $sup+e exec thunderbird
 bindsym $sup+Shift+e exec "kmail --style=gtk"
 bindsym $sup+f exec pcmanfm
 bindsym $sup+g exec gimp
-bindsym $sup+h exec hterm
+bindsym $sup+h exec script-communicator
 bindsym $sup+i exec inkscape
-bindsym $sup+j exec synology-cloud-station
+bindsym $sup+j exec rainlendar
 bindsym $sup+k exec wireshark
 bindsym $sup+l exec libreoffice
 bindsym $sup+m exec mixxx
@@ -346,7 +347,7 @@ bindsym $sup+o exec /opt/ti/ccsv6/eclipse/ccstudio
 #bindsym $sup+p exec "xrandr --output DPI1 --auto && xrandr --output LVDS1 --off"
 bindsym $sup+p exec "xrandr --output DP-1 --auto"
 bindsym $sup+Shift+p exec "xrandr --output eDP1 --auto && xrandr --output DP-1 --off"
-bindsym $sup+q exec qtcreator -style=gtk
+bindsym $sup+q exec qtcreator
 bindsym $sup+r exec termite -e ranger
 bindsym $sup+s exec rofi -show ssh
 bindsym $sup+t [con_mark="^todo$"] scratchpad show
@@ -356,10 +357,10 @@ bindsym $sup+w exec qutebrowser
 bindsym $sup+Shift+w exec firefox
 bindsym $sup+x exec keepassx
 bindsym $sup+y exec system-config-printer
-bindsym $sup+z exec wpa_gui
+#bindsym $sup+z exec wpa_gui
 
 bindsym $alt+Return exec termite
-#bindsym $alt+Shift+Return exec termite cd `xcwd`
+bindsym $alt+Shift+Return exec termite -d $(xcwd)
 
 bindsym $sup+1 exec "xterm -e 'yes | ~/ye-olde-cloude/gibs/forti/forticlientsslvpn_cli --server vpn.bbzsogr.ch:443 --vpnuser cyril.andreatta'"
 bindsym $sup+2 exec "rdesktop -f -g 100% -K -P -z -x l -a 16 -r sound:off -u 'GRAPH-TECH\can' gt-data02:3389"
@@ -370,7 +371,7 @@ bindsym $sup+3 exec "vinagre -f --vnc-scale 192.168.112.13"
 # remote desktop
 bindsym $sup+5 exec "rdesktop -f -g 100% -K -P -z -x l -a 16 -r sound:off -u 'GRAPH-TECH\can' gt-server5"
 bindsym $sup+6 exec "rdesktop -f -g 100% -K -P -z -x l -a 16 -r sound:off -u 'Administrator' gt-server6:3389"
-#bindsym $sup+7
+bindsym $sup+7 exec "rdesktop -f -g 100% -K -P -z -x l -a 16 -r sound:off -u 'GRAPH-TECH\\can' gt-data02:3389"
 #bindsym $sup+8
 #bindsym $sup+9
 #bindsym $sup+0 focus, floating enable
@@ -389,6 +390,6 @@ bindsym XF86Sleep               exec $psst ~/.i3/i3exit.sh suspend
 bindsym XF86AudioLowerVolume    exec $psst pactl set-sink-volume @DEFAULT_SINK@ -5% && pactl set-sink-mute @DEFAULT_SINK@ 0 $update
 bindsym XF86AudioRaiseVolume    exec $psst pactl set-sink-volume @DEFAULT_SINK@ +5% && pactl set-sink-mute @DEFAULT_SINK@ 0 $update
 bindsym XF86AudioMute           exec $psst pactl set-sink-mute @DEFAULT_SINK@ toggle $update
-bindsym XF86MonBrightnessDown   exec light -U 0.5
-bindsym XF86MonBrightnessUp     exec light -A 0.5
+bindsym XF86MonBrightnessDown   exec light -U 1
+bindsym XF86MonBrightnessUp     exec light -A 1
 bindsym XF86Launch1             exec $psst speedcrunch
