--- a/qutebrowser/keys.conf
+++ b/qutebrowser/keys.conf
@@ -40,7 +40,7 @@
 
 [!normal]
 
-clear-keychain ;; leave-mode
+leave-mode
     <escape>
     <ctrl-[>
 
@@ -169,13 +169,13 @@ hint images tab
 hint images tab-bg
     .i
 
-hint links fill ":open {hint-url}"
+hint links fill :open {hint-url}
     ;o
 
-hint links fill ":open -t {hint-url}"
+hint links fill :open -t {hint-url}
     ;O
 
-hint links fill ":open -b {hint-url}"
+hint links fill :open -b {hint-url}
     .o
 
 hint links yank
@@ -233,34 +233,34 @@ yank
 yank -s
     yY
 
-yank -t
+yank title
     yt
 
-yank -ts
+yank title -s
     yT
 
-yank -d
+yank domain
     yd
 
-yank -ds
+yank domain -s
     yD
 
-paste
+open {clipboard}
     pp
 
 paste -s
     pP
 
-paste -t
+open -t {clipboard}
     Pp
 
-paste -ts
+open -t {primary}
     PP
 
-paste -w
+open -w {clipboard}
     wp
 
-paste -ws
+open -w {primary}
     wP
 
 quickmark-save
@@ -268,10 +268,11 @@ quickmark-save
 
 set-cmd-text -s :quickmark-load
     b
+    '
 
 set-cmd-text -s :quickmark-load -t
     B
-    '
+    "
 
 set-cmd-text -s :quickmark-load -w
     wb
@@ -411,7 +412,7 @@ stop
     <ctrl-s>
 
 print
-    <ctrl-alt-p>
+    <ctrl-p>
 
 open qute:settings
     Ss
@@ -432,17 +433,29 @@ follow-selected -t
 open -w
     <ctrl-n>
 
-enter-mode set_mark
+set-mark
     `
 
-yank -p
+yank pretty-url
     yp
 
-yank -ps
+yank pretty-url -s
     yP
 
-spawn mpv {url}
+spawn cvlc {url}
     x
+
+hint links spawn cvlc {hint-url}
+    X
+
+hint inputs
+    ;t
+
+repeat-command
+    .
+
+tab-next
+    <ctrl-pgdown>
 
 [insert]
 # Keybindings for insert mode.
@@ -489,22 +502,19 @@ hint all tab-bg
 # Useful hidden commands to map in this section:
 #  * `command-history-prev`: Switch to previous command in history.
 #  * `command-history-next`: Switch to next command in history.
-#  * `completion-item-prev`: Select previous item in completion.
-#  * `completion-item-next`: Select next item in completion.
+#  * `completion-item-focus`: Select another item in completion.
 #  * `command-accept`: Execute the command currently in the commandline.
 
 command-history-prev
-    <ctrl-p>
     <up>
 
 command-history-next
-    <ctrl-n>
     <down>
 
-completion-item-prev
+completion-item-focus prev
     <shift-tab>
 
-completion-item-next
+completion-item-focus next
     <tab>
 
 completion-item-del
@@ -542,6 +552,9 @@ prompt-yes
 prompt-no
     n
 
+prompt-open-download
+    <ctrl-x>
+
 [command,prompt]
 
 rl-backward-char
@@ -573,6 +586,8 @@ rl-kill-word
 
 rl-unix-word-rubout
     <ctrl-w>
+
+rl-backward-kill-word
     <alt-backspace>
 
 rl-yank
@@ -641,10 +656,10 @@ move-to-start-of-document
 move-to-end-of-document
     G
 
-yank-selected -p
+yank selection -s
     Y
 
-yank-selected
+yank selection
     y
     <return>
     <ctrl-m>
@@ -664,10 +679,4 @@ scroll up
 
 scroll right
     L
-
-spawn mpv {url}
-    x
-
-hint links spawn mpv {hint-url}
-    X
 
