--- a/qutebrowser/qutebrowser.conf
+++ b/qutebrowser/qutebrowser.conf
@@ -34,12 +34,7 @@
 #         smart: Search case-sensitively if there are capital chars
 #     Default: smart
 #
-# wrap-search (Bool):
-#     Whether to wrap finding text to the top when arriving at the end.
-#     Valid values: true, false
-#     Default: true
-#
-# startpage (List):
+# startpage (List of String):
 #     The default page(s) to open at the start, separated by commas.
 #     Default: https://duckduckgo.com
 #
@@ -130,6 +125,15 @@
 #         window: Open in a new window.
 #     Default: tab
 #
+# new-instance-open-target.window (String):
+#     Which window to choose when opening links as new tabs.
+#         last-opened: Open new tabs in the last opened window.
+#         last-focused: Open new tabs in the most recently focused
+#     window.
+#         last-visible: Open new tabs in the most recently visible
+#     window.
+#     Default: last-focused
+#
 # log-javascript-console (String):
 #     How to log javascript console messages.
 #         none: Don't log messages.
@@ -153,8 +157,7 @@
 #     Valid values: host, path, query, anchor
 #     Default: path,query
 ignore-case = smart
-wrap-search = true
-startpage = https://www.duckduckgo.com
+startpage = http://andreatta.ch
 default-page = ${startpage}
 auto-search = naive
 auto-save-config = true
@@ -163,20 +166,21 @@ editor = termite -e 'vim -p "{}"'
 editor-encoding = utf-8
 private-browsing = false
 developer-extras = true
-print-element-backgrounds = true
+print-element-backgrounds = false
 xss-auditing = false
 site-specific-quirks = true
-default-encoding =
+default-encoding = 
 new-instance-open-target = tab
+new-instance-open-target.window = last-focused
 log-javascript-console = none
 save-session = true
-session-default-name =
+session-default-name = 
 url-incdec-segments = path,query
 
 [ui]
 # General options related to the user interface.
 #
-# zoom-levels (PercList):
+# zoom-levels (List of Perc):
 #     The available zoom levels, separated by commas.
 #     Default:
 #     25%,33%,50%,67%,75%,90%,100%,110%,125%,150%,175%,200%,250%,300%,400%,500%
@@ -189,6 +193,11 @@ url-incdec-segments = path,query
 #     Where to show the downloaded files.
 #     Valid values: top, bottom
 #     Default: top
+#
+# status-position (VerticalPosition):
+#     The position of the status bar.
+#     Valid values: top, bottom
+#     Default: bottom
 #
 # message-timeout (Int):
 #     Time (in ms) to show messages in the statusbar for.
@@ -208,11 +217,6 @@ url-incdec-segments = path,query
 #         never: Never show a confirmation.
 #     Default: never
 #
-# display-statusbar-messages (Bool):
-#     Whether to display javascript statusbar messages.
-#     Valid values: true, false
-#     Default: false
-#
 # zoom-text-only (Bool):
 #     Whether the zoom factor on a frame applies only to the text or to
 #     all content.
@@ -229,7 +233,7 @@ url-incdec-segments = path,query
 #     User stylesheet to use (absolute filename, filename relative to
 #     the config directory or CSS string). Will expand environment
 #     variables.
-#     Default: ::-webkit-scrollbar { width: 0px; height: 0px; }
+#     Default: html > ::-webkit-scrollbar { width: 0px; height: 0px; }
 #
 # css-media-type (String):
 #     Set the CSS media type.
@@ -264,12 +268,8 @@ url-incdec-segments = path,query
 #     otherwise.
 #     * `{id}`: The internal window ID of this window.
 #     * `{scroll_pos}`: The page scroll position.
+#     * `{host}`: The host of the current web page.
 #     Default: {perc}{title}{title_sep}qutebrowser
-#
-# hide-mouse-cursor (Bool):
-#     Whether to hide the mouse cursor.
-#     Valid values: true, false
-#     Default: false
 #
 # modal-js-dialog (Bool):
 #     Use standard JavaScript modal dialog for alert() and confirm()
@@ -281,31 +281,30 @@ url-incdec-segments = path,query
 #     Valid values: true, false
 #     Default: false
 #
-# keyhint-blacklist (List):
+# keyhint-blacklist (List of String):
 #     Keychains that shouldn't be shown in the keyhint dialog
 #     Globs are supported, so ';*' will blacklist all keychainsstarting
 #     with ';'. Use '*' to disable keyhints
 #     Default:
 zoom-levels = 25%,33%,50%,67%,75%,90%,100%,110%,125%,150%,175%,200%,250%,300%,400%,500%
-default-zoom = 120%
+default-zoom = 125%
 downloads-position = bottom
+status-position = bottom
 message-timeout = 2000
 message-unfocused = false
 confirm-quit = never
-display-statusbar-messages = true
 zoom-text-only = false
 frame-flattening = false
 user-stylesheet = ::-webkit-scrollbar { width: 0px; height: 0px; }
-css-media-type =
+css-media-type = 
 smooth-scrolling = true
 remove-finished-downloads = -1
 hide-statusbar = false
-statusbar-padding = 1,1,0,0
+statusbar-padding = 1,1,1,1
 window-title-format = {perc}{title}{title_sep}
-hide-mouse-cursor = false
 modal-js-dialog = false
 hide-wayland-decoration = false
-keyhint-blacklist =
+keyhint-blacklist = 
 
 [network]
 # Settings related to the network.
@@ -361,12 +360,12 @@ keyhint-blacklist =
 do-not-track = true
 accept-language = en-US,en
 referer-header = same-domain
-user-agent = Mozilla/5.0 (X11; Linux x86_64; rv:10.0) Gecko/20100101 Firefox/47.0
+user-agent = Mozilla/5.0 (Windows NT 6.1) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/41.0.2228.0 Safari/537.36
 proxy = system
 proxy-dns-requests = true
 ssl-strict = ask
 dns-prefetch = true
-custom-headers =
+custom-headers = 
 
 [completion]
 # Options related to completion and command history.
@@ -442,13 +441,13 @@ scrollbar-padding = 2
 # Options related to input modes.
 #
 # timeout (Int):
-#     Timeout for ambiguous key bindings.
+#     Timeout (in milliseconds) for ambiguous key bindings.
 #     If the current input forms both a complete match and a partial
 #     match, the complete match will be executed after this time.
 #     Default: 500
 #
 # partial-timeout (Int):
-#     Timeout for partially typed key bindings.
+#     Timeout (in milliseconds) for partially typed key bindings.
 #     If the current input forms only partial matches, the keystring
 #     will be cleared after this time.
 #     Default: 5000
@@ -509,7 +508,7 @@ insert-mode-on-plugins = false
 auto-leave-insert-mode = true
 auto-insert-mode = false
 forward-unbound-keys = auto
-spatial-navigation = false
+spatial-navigation = true
 links-included-in-focus-chain = true
 rocker-gestures = false
 mouse-zoom-divider = 512
@@ -619,6 +618,7 @@ mouse-zoom-divider = 512
 #     * `{index}`: The index of this tab.
 #     * `{id}`: The internal tab ID of this tab.
 #     * `{scroll_pos}`: The page scroll position.
+#     * `{host}`: The host of the current web page.
 #     Default: {index}: {title}
 #
 # title-alignment (TextAlignment):
@@ -653,10 +653,10 @@ show-favicons = true
 width = 20%
 indicator-width = 3
 tabs-are-windows = false
-title-format = {index}: {title}
-title-alignment = left
+title-format = {perc} {index}: {title}
+title-alignment = center
 mousewheel-tab-switching = true
-padding = 0,0,5,5
+padding = 2,2,5,5
 indicator-padding = 2,2,0,4
 
 [storage]
@@ -688,7 +688,7 @@ indicator-padding = 2,2,0,4
 #     http://webkit.org/blog/427/webkit-page-cache-i-the-basics/
 #     Default:
 #
-# object-cache-capacities (WebKitBytesList):
+# object-cache-capacities (List of WebKitBytes):
 #     The capacities for the global memory cache for dead objects such
 #     as stylesheets or scripts. Syntax: cacheMinDeadCapacity,
 #     cacheMaxDead, totalCapacity.
@@ -736,10 +736,10 @@ indicator-padding = 2,2,0,4
 download-directory = ~/dwl
 prompt-download-directory = true
 remember-download-directory = true
-maximum-pages-in-cache =
-object-cache-capacities =
-offline-storage-default-quota =
-offline-web-application-cache-quota =
+maximum-pages-in-cache = 
+object-cache-capacities = 
+offline-storage-default-quota = 
+offline-web-application-cache-quota = 
 offline-storage-database = true
 offline-web-application-storage = true
 local-storage = true
@@ -766,7 +766,8 @@ cache-size = 52428800
 #     Default: false
 #
 # webgl (Bool):
-#     Enables or disables WebGL.
+#     Enables or disables WebGL. For QtWebEngine, Qt/PyQt >= 5.7 is
+#     required for this setting.
 #     Valid values: true, false
 #     Default: false
 #
@@ -841,7 +842,7 @@ cache-size = 52428800
 #     Valid values: true, false
 #     Default: true
 #
-# host-block-lists (UrlList):
+# host-block-lists (List of Url):
 #     List of URLs of lists which contain hosts to block.
 #     The file can be in one of the following formats:
 #     - An '/etc/hosts'-like file
@@ -856,7 +857,7 @@ cache-size = 52428800
 #     Valid values: true, false
 #     Default: true
 #
-# host-blocking-whitelist (List):
+# host-blocking-whitelist (List of String):
 #     List of domains that should always be loaded, despite being
 #     ad-blocked.
 #     Domains may contain * and ? wildcards and are otherwise required
@@ -877,7 +878,7 @@ webgl = true
 css-regions = true
 hyperlink-auditing = false
 geolocation = ask
-notifications = true
+notifications = false
 javascript-can-open-windows = false
 javascript-can-close-windows = false
 javascript-can-access-clipboard = false
@@ -941,16 +942,16 @@ enable-pdfjs = false
 #     Default: true
 #
 # auto-follow-timeout (Int):
-#     A timeout to inhibit normal-mode key bindings after a
-#     successfulauto-follow.
+#     A timeout (in milliseconds) to inhibit normal-mode key bindings
+#     after a successful auto-follow.
 #     Default: 0
 #
-# next-regexes (RegexList):
+# next-regexes (List of Regex):
 #     A comma-separated list of regexes to use for 'next' links.
 #     Default:
 #     \bnext\b,\bmore\b,\bnewer\b,\b[>→≫]\b,\b(>>|»)\b,\bcontinue\b
 #
-# prev-regexes (RegexList):
+# prev-regexes (List of Regex):
 #     A comma-separated list of regexes to use for 'prev' links.
 #     Default: \bprev(ious)?\b,\bback\b,\bolder\b,\b[<←≪]\b,\b(<<|«)\b
 #
@@ -958,7 +959,12 @@ enable-pdfjs = false
 #     Which implementation to use to find elements to hint.
 #         javascript: Better but slower
 #         python: Slightly worse but faster
-#     Default: javascript
+#     Default: python
+#
+# hide-unmatched-rapid-hints (Bool):
+#     Controls hiding unmatched hints in rapid mode.
+#     Valid values: true, false
+#     Default: true
 border = 1px solid #E3BE23
 opacity = 0.9
 mode = letter
@@ -972,6 +978,7 @@ auto-follow-timeout = 0
 next-regexes = \bnext\b,\bmore\b,\bnewer\b,\b[>→≫]\b,\b(>>|»)\b,\bcontinue\b
 prev-regexes = \bprev(ious)?\b,\bback\b,\bolder\b,\b[<←≪]\b,\b(<<|«)\b
 find-implementation = javascript
+hide-unmatched-rapid-hints = true
 
 [searchengines]
 # Definitions of search engines which can be used via the address bar.
@@ -984,7 +991,6 @@ find-implementation = javascript
 DEFAULT = https://duckduckgo.com/?q={}
 google = https://www.google.com/search?hl=en&q={}
 gg = ${google}
-
 aur = https://aur.archlinux.org/packages/?O=0&K={}
 de = https://translate.google.com/#de/en/{}
 dir = https://www.google.ch/maps/dir/{}
@@ -1005,7 +1011,7 @@ yt = https://www.youtube.com/results?search_query={}
 # Colors used in the UI.
 # A value can be in one of the following format:
 #  * `#RGB`/`#RRGGBB`/`#RRRGGGBBB`/`#RRRRGGGGBBBB`
-#  * A SVG color name as specified in http://www.w3.org/TR/SVG/types.html#ColorKeywords[the W3C specification].
+#  * An SVG color name as specified in http://www.w3.org/TR/SVG/types.html#ColorKeywords[the W3C specification].
 #  * transparent (no color)
 #  * `rgb(r, g, b)` / `rgba(r, g, b, a)` (values 0-255 or percentages)
 #  * `hsv(h, s, v)` / `hsva(h, s, v, a)` (values 0-255, hue 0-359)
@@ -1335,11 +1341,11 @@ statusbar.url.fg.error = orange
 statusbar.url.fg.warn = yellow
 statusbar.url.fg.hover = aqua
 tabs.fg.odd = white
-tabs.bg.odd = grey
+tabs.bg.odd = #222
 tabs.fg.even = white
-tabs.bg.even = darkgrey
-tabs.fg.selected.odd = white
-tabs.bg.selected.odd = black
+tabs.bg.even = #555
+tabs.fg.selected.odd = #555
+tabs.bg.selected.odd = #ceecee
 tabs.fg.selected.even = ${tabs.fg.selected.odd}
 tabs.bg.selected.even = ${tabs.bg.selected.odd}
 tabs.bg.bar = #555555
@@ -1379,6 +1385,10 @@ keyhint.bg = rgba(0, 0, 0, 80%)
 # completion (Font):
 #     Font used in the completion widget.
 #     Default: 8pt ${_monospace}
+#
+# completion.category (Font):
+#     Font used in the completion categories.
+#     Default: bold ${completion}
 #
 # tabbar (QtFont):
 #     Font used in the tab bar.
@@ -1445,19 +1455,20 @@ keyhint.bg = rgba(0, 0, 0, 80%)
 #     Default: 8pt ${_monospace}
 _monospace = Terminus, Monospace, "DejaVu Sans Mono", Monaco, "Bitstream Vera Sans Mono", "Andale Mono", "Liberation Mono", "Courier New", Courier, monospace, Fixed, Consolas, Terminal
 completion = 11pt ${_monospace}
+completion.category = bold ${completion}
 tabbar = 11pt ${_monospace}
 statusbar = 11pt ${_monospace}
 downloads = 11pt ${_monospace}
 hints = bold 23px Monospace
 debug-console = 11pt ${_monospace}
-web-family-standard =
-web-family-fixed =
-web-family-serif =
-web-family-sans-serif =
-web-family-cursive =
-web-family-fantasy =
-web-size-minimum =
-web-size-minimum-logical =
-web-size-default =
-web-size-default-fixed =
+web-family-standard = 
+web-family-fixed = 
+web-family-serif = 
+web-family-sans-serif = 
+web-family-cursive = 
+web-family-fantasy = 
+web-size-minimum = 
+web-size-minimum-logical = 
+web-size-default = 
+web-size-default-fixed = 
 keyhint = 8pt ${_monospace}
