Make tooltips opaque with compton

--- a/compton/compton.conf
+++ b/compton/compton.conf
@@ -83,7 +83,7 @@ sw-opti = false;
 unredir-if-possible = true;
 
 # Specify a list of conditions of windows that should always be considered focused.
-focus-exclude = [ 
+focus-exclude = [
     "class_g = 'Firefox'",
     "class_g = 'XTerm'"
 ];
@@ -153,10 +153,18 @@ wintypes:
         # shadow: Give those windows shadow
         shadow = false;
         # opacity: Default opacity for the type of windows.
-        opacity = 0.75;
+        opacity = 0.90;
         # focus: Whether to always consider windows of this type focused.
         focus = true;
     };
+
+	utility =
+	{
+		fade = false;
+		shadow = true;
+		opacity = 1.00;
+		focus = true;
+	};
 };
 
 #################################
