Change opacity for docks and some windows

--- a/compton/compton.conf
+++ b/compton/compton.conf
@@ -85,6 +85,7 @@ unredir-if-possible = true;
 # Specify a list of conditions of windows that should always be considered focused.
 focus-exclude = [
     "class_g = 'Firefox'",
+    "class_g = 'Google-chrome'",
     "class_g = 'XTerm'"
 ];
 
@@ -165,6 +166,11 @@ wintypes:
 		opacity = 1.00;
 		focus = true;
 	};
+
+    dock =
+    {
+		opacity = 0.8;
+	};
 };
 
 #################################
@@ -181,6 +187,8 @@ inactive-dim = 0.4
 
 opacity-rule = [
 	"88:class_g = 'URxvt' && !_NET_WM_STATE@:32a",
+	"99:class_g = 'Google-chrome'",
+	"22:class_g = '_scratchpad_'",
 	"0:_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'",
 	"75:_NET_WM_STATE@:32a *= '_NET_WM_STATE_STICKY'"
 ];
