--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -18,7 +18,7 @@ general {
 
 order += "volume master"
 order += "disk /"
-order += "disk /home"
+#order += "disk /home"
 #order += "run_watch DHCP"
 #order += "ipv6"
 #order += "run_watch VPN"
@@ -36,7 +36,7 @@ wireless wlp4s0 {
 }
 
 ethernet enp0s25 {
-    # if you use %speed, i3status requires root privileges
+    #if you use %speed, i3status requires root privileges
     format_up = "%ip (%speed)"
     format_down = ""
 }
@@ -51,6 +51,7 @@ battery 0 {
     hide_seconds = true
     status_chr = " "
     status_bat = " "
+    status_unk = " "
     status_full = " "
 }
 
@@ -75,17 +76,19 @@ cpu_usage {
 }
 
 cpu_temperature 0 {
-format = " %degrees°C"
+	format = " %degrees°C"
 }
 
-disk "/home" {
-    format = " %free"
+disk "/" {
+	format = " %avail"
 	prefix_type	= custom
+	low_threshold = 20
+	threshold_type = percentage_avail
 }
 
 volume master {
-    format = " %volume"
-    format_muted = " %volume"
+    format = "%volume  "
+    format_muted = " "
     device = "default"
     mixer = "Master"
     mixer_idx = 0
