New bindings for qutebrowser

--- a/qutebrowser/keys.conf
+++ b/qutebrowser/keys.conf
@@ -27,8 +27,7 @@
 #
 # For simple keys (no `<>`-signs), a capital letter means the key is pressed
 # with Shift. For special keys (with `<>`-signs), you need to explicitly add
-# `Shift-` to match a key pressed with shift.  You can bind multiple commands
-# by separating them with `;;`.
+# `Shift-` to match a key pressed with shift.
 #
 # Note that default keybindings are always bound, and need to be explicitly
 # unbound if you wish to remove them:
@@ -47,7 +46,7 @@ leave-mode
 [normal]
 # Keybindings for normal mode.
 
-clear-keychain ;; search
+clear-keychain ;; search ;; fullscreen --leave
     <escape>
 
 set-cmd-text -s :open
@@ -92,7 +91,6 @@ tab-only
 tab-focus
     J
     gt
-    <right>
 
 tab-move
     gm
@@ -108,7 +106,7 @@ tab-move +
 tab-prev
     K
     gT
-    <left>
+    <shift-left>
 
 tab-clone
     gC
@@ -120,6 +118,7 @@ reload -f
     R
 
 back
+    <backspace>
     H
     <pgup>
 
@@ -130,6 +129,7 @@ back -w
     wh
 
 forward
+    <shift-backspace>
     L
     <pgdown>
 
@@ -245,22 +245,22 @@ yank domain
 yank domain -s
     yD
 
-open {clipboard}
+open -- {clipboard}
     pp
 
-paste -s
+open -- {primary}
     pP
 
-open -t {clipboard}
+open -t -- {clipboard}
     Pp
 
-open -t {primary}
+open -t -- {primary}
     PP
 
-open -w {clipboard}
+open -w -- {clipboard}
     wp
 
-open -w {primary}
+open -w -- {primary}
     wP
 
 quickmark-save
@@ -298,7 +298,7 @@ set-cmd-text -s :set
 set-cmd-text -s :set -t
     sl
 
-set-cmd-text -s :set keybind
+set-cmd-text -s :bind
     sk
 
 set-cmd-text -s :restart
@@ -343,6 +343,7 @@ navigate decrement
     <ctrl-x>
 
 inspector
+    <f12>
     wi
 
 download
@@ -455,7 +456,26 @@ repeat-command
     .
 
 tab-next
+    <shift-right>
     <ctrl-pgdown>
+
+set-cmd-text /
+    /
+
+set-cmd-text ?
+    ?
+
+set-cmd-text :
+    :
+
+wq
+    ZZ
+
+record-macro
+    q
+
+run-macro
+    @
 
 [insert]
 # Keybindings for insert mode.
@@ -468,7 +488,7 @@ tab-next
 open-editor
     <ctrl-e>
 
-paste-primary
+insert-text {primary}
     <shift-ins>
 
 [hint]
@@ -528,6 +548,12 @@ command-accept
     <enter>
     <shift-enter>
 
+completion-item-focus next-category
+    <ctrl-tab>
+
+completion-item-focus prev-category
+    <ctrl-shift-tab>
+
 [prompt]
 # Keybindings for prompts in the status line.
 # You can bind normal keys in this mode, but they will be only active
@@ -535,8 +561,8 @@ command-accept
 # bind special keys.
 # Useful hidden commands to map in this section:
 #  * `prompt-accept`: Confirm the entered value.
-#  * `prompt-yes`: Answer yes to a yes/no question.
-#  * `prompt-no`: Answer no to a yes/no question.
+#  * `prompt-accept yes`: Answer yes to a yes/no question.
+#  * `prompt-accept no`: Answer no to a yes/no question.
 
 prompt-accept
     <return>
@@ -546,14 +572,22 @@ prompt-accept
     <enter>
     <shift-enter>
 
-prompt-yes
+prompt-accept yes
     y
 
-prompt-no
+prompt-accept no
     n
 
 prompt-open-download
     <ctrl-x>
+
+prompt-item-focus prev
+    <shift-tab>
+    <up>
+
+prompt-item-focus next
+    <tab>
+    <down>
 
 [command,prompt]
 
